fix: remove 100vh from body to ensure overlay covers full screen in landscape mode

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -14,7 +14,6 @@ body {
     left: 50%;
     transform: translateX(-50%);
     z-index: -2;
-    height: 100vh;
     width: 100vw;
     background-size: cover;
     display: flex;
